# libwebui

./: .gitignore  Makefile.am  configure-debug.sh  configure.ac
docs/: webui-manual.text
pkg-config/: webui.pc.in
src/: Makefile.am  Makefile.in  test.cpp  webui.cpp
src/include/webui/: webui.h
ui/: test.html
